@@ -3,7 +3,7 @@ Type: Package
 Title: Tools for Management of Survey Data, Graphics, Programming, Statistics, and
           Simulation
 Version: 0.96-10
-Date: 2014-08-20
+Date: 2014-10-12
 Author: Martin Elff (with contributions by Christopher N. Lawrence, Dave Atkins, Jason W. Morgan, and Achim Zeileis)
 Maintainer: Martin Elff <elff@gmx.com>
 Description: One of the aims of this package is to make life easier for
@@ -20,5 +20,6 @@ License: GPL-2
 LazyLoad: Yes
 Depends: R (>= 2.9.0), lattice, stats, methods, utils, MASS
 Suggests: car, splines
+Enhances: lme4
 Imports: grid
 URL: http://www.martin-elff.net/software/memisc/,http://memisc.r-forge.r-project.org/
