@@ -1,3 +1,10 @@
+2014-10-11:
+  - added method for "merMod" objects to the getSummary() generic function. mtable() now 
+    should be able (again) to handle estimation results produced by lmer() and glmer() from 
+    package 'lme4'.
+  - recode() handles character vectors in a more convenient way: They are converted
+    into factors with sorted unique values (after recoding) as levels.
+
 2014-09-08:
   - 'getSummary.glm' now takes care of missing values in weights of glm objects.
 
